# Ghostdav

./: README.md
backend/: __init__.py  main.py
backend/api/: __init__.py
backend/config/: __init__.py  constants.py  settings.py
backend/core/: __init__.py  encryption.py  key_manager.py  obfuscation.py  stego.py  utils.py
backend/media/: __init__.py  audio_stream.py  media_utils.py  video_stream.py
backend/networking/: __init__.py  client.py  message.py  p2p.py  relay_client.py  server.py  stun_client.py
backend/routing/: __init__.py  alias_manager.py  fake_ip.py  packet_builder.py  session_tracker.py  stage_router.py
backend/stego/: __init__.py  embedder.py  extractor.py  image_handler.py
backend/ui/: __init__.py  gui.py  main_window.py  widgets.py
core_engine/: CMakeLists.txt  main.cpp
docs/: DEPLOYMENT.md  FLUTTER_COMPLETION.md  architecture.md  deployment.md  roadmap.md
frontend/desktop/: README.md  index.html  package.json
frontend/desktop/public/: electron.js  index.html  preload.js
frontend/desktop/src/: ChatApp.css  ChatApp.jsx  main.js
frontend/mobile/: README.md  main.dart  pubspec.yaml
frontend/mobile/android/app/src/main/: AndroidManifest.xml
frontend/mobile/ios/Runner/: Info.plist
frontend/mobile/lib/: main.dart
htmlcov/: class_index.html  index.html  z_084d634ebfa787a0_fake_ip_py.html  z_084d634ebfa787a0_stage_router_py.html  z_436d00963c30bf88_embedder_py.html  z_e17dcb4e28158375_main_py.html
